--- a/Ignis.Authentication/Ignis.Authentication.csproj
+++ b/Ignis.Authentication/Ignis.Authentication.csproj
@@ -7,9 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.3" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
